attempt to fix html body on mobile

--- a/web/themes/custom/tigris/assets/scss/base/_normalize.scss
+++ b/web/themes/custom/tigris/assets/scss/base/_normalize.scss
@@ -1,8 +1,9 @@
 html {
-  height: 100vh;
+  height: 100%;
   width: 100%;
 }
 body {
+  overflow-x: hidden;
   overflow-y: scroll;
   height: 100%;
   width: 100%;
